# PayRox-Go_Beyond-Production

./: .editorconfig  .env.docker  .env.example  .env.production  .eslintignore.backup  .eslintrc.canonical.json  .eslintrc.final.json  .eslintrc.json  .eslintrc.simple.json  .eslintrc.yml  .eslintrc.zero-issue.js  .eslintrc.zero-issue.json  .gitattributes  .gitignore  .solhint.json  .solhintignore  CI_CLEANUP_NOTES.md  CLEAN_REPOSITORY_MIGRATION.md  CRASH_PREVENTION_ACTIVE.md  CRITICAL_ISSUE_ANALYSIS.md  CROSSCHAIN_TASKS_VALIDATION.md  DEPENDENCY_AUDIT_SUMMARY.md  DEPENDENCY_CONFLICT_RESOLVED.md  DEPLOYMENT.md  Dockerfile  EMPTY_FILE_RESTORATION_COMPLETE.md  ERROR_FIXING_SYSTEM_SUMMARY.md  ESLINT_SOLUTION.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GOVERNANCE_SECURITY_AUDIT.md  IMPORT_PATHS.md  INTERFACE_ABI_VALIDATION.md  MANIFEST_DISPATCHER_SECURITY_AUDIT.md  ORDERED_MERKLE_SECURITY_AUDIT.md  PAYROX_RELEASE_RUNBOOK.md  PAYROX_SYSTEM_KNOWLEDGE.md  PRODUCTION_DOCKER_GUIDE.md  PROFESSIONAL_DEVELOPMENT_PROTOCOL.md  README.md  RECOVERY_REPORT.md  (+54 more)
.github/: pull_request_template.md
.payrox/: auto-fix-config.js  auto-fix-runner.js  pre-commit-hook.js
.quality/: error-report-2025-08-21.json  lint-zero-baseline.json
AI/: learning-manifest.json  learning-scheduler.js  universal-refactor-prompt.json  universal-refactor-validator.js
Plugins To Make/: README.md  foundry-integration.md  github-actions.md  hardhat-plugin.md  vscode-extension.md
app/: jobs.py  main.py  mock_server.py  planner_app.py  test_server.py
arch/: facts.json  facts.json.template
config/: README-versions.md  versions.json
contracts/: MinimalFacet.sol  fix-oz-imports.ps1
demo-deployment/: DemoFacetA.sol
docs/: CONTRACT_SPLITTING_PIPELINE.md  CREATE2_CI_INTEGRATION.md  CUSTOMER_FACET_GUIDE.md  ENHANCED_DEPLOYMENT_SYSTEM.md  FACET_GENERATOR.md  FAST_PR_MODE.md  IntegrationValidation-Visual.md  OLLAMA.md  (+11 more)
(+601 files in other folders)
