[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payrox-go-beyond"
version = "1.0.0"
description = "PayRox Production Smart Contract Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PayRpc", email = "contact@payrpc.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "pydantic>=2.5.0,<3.0.0",
    "rank-bm25>=0.2.2,<0.3.0",
    "ollama>=0.2.0,<0.3.0",
    "prometheus-fastapi-instrumentator>=6.1.0,<7.0.0",
    "httpx>=0.27.0,<0.28.0",
    "aiohttp>=3.9.0,<4.0.0",
    "python-multipart>=0.0.6,<0.1.0",
    "email-validator>=2.1.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
prod = [
    "gunicorn>=21.2.0,<22.0.0",
    "structlog>=23.2.0,<24.0.0",
    "sentry-sdk[fastapi]>=1.38.0,<2.0.0",
    "cryptography>=41.0.0,<42.0.0",
    "redis>=5.0.0,<6.0.0",
    "aioredis>=2.0.0,<3.0.0",
    "psutil>=5.9.0,<6.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
]

[project.scripts]
payrox-api = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
